--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <figure class="hero" alt="Image of a team meeting"></figure>
     <section class="content">
-        <article class="search-engine-optimization">
+        <article id="search-engine-optimization" class="search-engine-optimization">
             <img src="./Assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization (SEO) provides content, backlink, headings, link building, mobile compatibility and social media" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
